--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE=mongodb://hellokcr:Konepalli@ac-ts0ftlx-shard-00-00.hpocola.mongodb.net:27017,ac-ts0ftlx-shard-00-01.hpocola.mongodb.net:27017,ac-ts0ftlx-shard-00-02.hpocola.mongodb.net:27017/?ssl=true&replicaSet=atlas-zgec31-shard-0&authSource=admin&retryWrites=true&w=majority
 EMAIL=21bd1a052ucseb@gmail.com
 PASSWORD=ncqcwllqafqpovak
+PORT=4002
