--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "mongoose": "^6.8.3",
     "nodemailer": "^6.9.0",
     "validator": "^13.7.0"
-  }
+  },
+  "proxy":"https://frontendonly.onrender.com/" 
 }
